# camera_calibration_sim

./: CMakeLists.txt  camera_world.world  package.xml
launch/: board.launch
meshes/: checkerboard_9x9.blend  checkerboard_9x9.blend1  checkerboard_9x9.blend2  checkerboard_9x9.dae
scripts/: record_calibration_poses.py
urdf/: board.urdf.xacro  camera.urdf.xacro
