<package>
  <name>camera_calibration_sim</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author email="jbo@jhu.edu">Jonathan Bohren</author>
  <description>
    This package contains tools for simulating camera calibration tools with
    the gazebo simulator.
  </description>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>

  <run_depend>opencv</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>camera_calibration</run_depend>
  <run_depend>camera_pose_calibration</run_depend>

</package>
